<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Workers App</string>
    <string name="tvPhone">رقم الجوال</string>
    <string name="btnSendVerificationCode">أرسل كود التحقق</string>
    <string name="tvPalestinePhone">+970</string>
    <string name="btnLogin">دخول</string>
    <string name="tvRegisterNow">سجل الأن</string>
    <string name="tvInAnotherTime">في وقت لاحق</string>
    <string name="DoNotHave">ليس لديك حساب، قم بالتسجيل الأن!</string>
    <string name="tvDoNotHaveAnAccount">ليس لديك حساب؟</string>
    <string name="tvFill">يرجى تعبئة هذا الحقل</string>
    <string name="female">أنثى</string>
    <string name="male">ذكر</string>
    <string name="jobs">الوظائف</string>

    <string name="tvLoginPhone">سجّل الدخول باستخدام رقم الجوال</string>
    <string name="etPhoneHint">592 777 888</string>
    <string name="tvAccountType">نوع الحساب</string>
    <string name="tvWorker">عامل</string>
    <string name="tvWorkOwner">صاحب عمل</string>
    <string name="resendCode">أعد ارسال الرمز</string>
    <string name="tvVerificationCode">كود التحقق</string>
    <string name="tvBottomSheetMessage">أدخل رمز التحقق الذي أرسلناه من خلال رقم هاتفك.</string>


    <string name="TvReviews">آراء العملاء </string>

    <string name="businessToolBar">نماذج الأعمال</string>
    <string name="businessNumImages">1/3</string>
    <string name="businessDescription">الصوفا الخشبية من سبع قطع :3كبير, 2 صغير،كرسي طاولة القهوة، طاولة جانبية، طاولة وسط ,وحدة تخزين. مصنوعة من الخشب الصلب الطبيعي, طاولة وسط ,وحدة تخزين. مصنوعة من الخشب الصلب الطبيعي.</string>
    <string name="businessDateAch">تاريخ الإنجاز</string>
    <string name="businessDate">12/3/2023</string>
    <string name="businessCat1">خشب</string>
    <string name="businessCat2">أثاث خشبي</string>
    <string name="businessCat3">أثاث خشبي</string>
    <string name="businessCat4">أثاث خشبي</string>
    <string name="businessRateS">4.8</string>
    <string name="businessUserNameS">عبدالله يوسف</string>
    <string name="businessHurtNumS">5</string>
    <string name="businessEyeNumS">12</string>


    <string name="ProfileToolBar">البيانات الشخصية</string>
    <string name="ProfileToolBarPage">الصفحة الشخصية </string>
    <string name="ProfileUserName">عبد الله يوسف</string>
    <string name="ProfileNickName">(أبو عمر)</string>
    <string name="ProfileJobName">نجار</string>
    <string name="ProfileRate">4.8</string>
    <string name="ProfileCurrent">الحالية</string>
    <string name="ProfileCurrentNum">1</string>
    <string name="ProfileEnd">المنتهية</string>
    <string name="ProfileEndNum">2</string>
    <string name="ProfileJobs">الوظائف</string>
    <string name="ProfileJobNum">3</string>
    <string name="ProfileCv">أعمل في منجزة منذ أعمل في منجرة أعمل في منجرة</string>
    <string name="ProfileCvGray">السيرة الذاتية</string>
    <string name="ProfileLocation">خانيونس</string>
    <string name="ProfileMobile">+97059000000</string>
    <string name="ProfileDate">21/3/2023ا</string>
    <string name="ProfileJoinDate">تاريخ الانضمام:</string>


    <string name="ArithmeticNav">حسابي</string>
    <string name="myJobsNav">وظائفي</string>
    <string name="PresenterNav">مقدم عليها</string>
    <string name="CareersNav">وظائف</string>


    <string name="tvJobDescription">وصف العمل</string>
    <string name="etDescriptionHint">أضف وصفا دقيقا يوضح ميزات العمل.</string>
    <string name="tvPicture">صور وملفات العمل</string>
    <string name="tvJobType">فئة العمل</string>
    <string name="btnAddPost">إضافة</string>
    <string name="tvProjectedBudget">الميزانية المتوقعة</string>
    <string name="tvExpectedWorkDuration">مدة العمل المتوقعة</string>
    <string name="tvJobLocation">حدد موقع العمل</string>
    <string name="tvWorkTitle">عنوان العمل</string>
    <string name="etWorkTitleHint">أدرج عنوانا موجزا يصف مشروعك بشكل دقيق.</string>
    <string name="tvOptional">اختياري</string>
    <string name="btnEditModel">تعديل</string>

    <string-array name="cities">
        <item>غزة</item>
        <item>دير البلح</item>
        <item>خانيونس</item>
        <item>جباليا</item>
        <item>رفح</item>
        <item>بيت لاهيا</item>
        <item>بيت حانون</item>
    </string-array>

    <string-array name="work">
        <item>نجار</item>
        <item>حداد</item>
        <item>بناء</item>
        <item>دهان</item>
        <item>بليط</item>
        <item>قصارة</item>
    </string-array>

    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="post_paragraph">بدي خزانة نوع خشب أند إي أف، ست ضرفات طابقينبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقينبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقينبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقيبدي خزانة نوع خشب أند بدي خزانة نوع خشب أند إي أف، ست ضرفات طابقينبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقينبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقينبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقيبدي خزانة نوع خشب أند إي أف، ست ضرفات طابقين</string>
    <string name="closeProject">إغلاق المشروع</string>
    <string name="jobTitle">بدي خزانة نوع خشب أند إي أف، ست ضرفات</string>
    <string name="jobdata">بيانات الوظيفة</string>
    <string name="close_job">إغلاق المشروع</string>
    <string name="_32">32</string>
    <string name="month">شهر</string>
    <string name="ile">ILE</string>
    <string name="_200">200</string>
    <string name="city">خانيونس</string>
    <string name="_2">تم النشر قبل: 2س</string>
    <string name="offers_37">Offers: 37</string>
    <string name="tv_offers">عدد العروض</string>
    <string name="tv_projectstate">حالة المشروع</string>
    <string name="tv_now">الآن</string>
    <string name="tv_duration">مايو/2023 -</string>
    <string name="_4_5i">4</string>
    <string name="tv_workerName">عبدالله يوسف</string>
    <string name="_37i">37i</string>
    <string name="tv_finishproject">إنهاء المشروع</string>
    <string name="_2023_2023">مايو/2023 - أغسطس/2023</string>
    <string name="vv">عبدالله نجار رائع وملتزم بالوقت  نجار رائع </string>
    <string name="putoffer">قدم عرضك</string>
    <string name="write_offer">اكتب عرضك</string>
    <string name="worke_raiting">تقيم العامل</string>
    <string name="employmentRate">معدل التوظيف</string>
    <string name="numberOfJobs">عدد الوظائف</string>
    <string name="openedJobs">الوظائف المفتوحة</string>
    <string name="finishedJobs">الأعمال المكتملة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itOpenJobs">وظائف مفتوحة</string>
    <string name="itInProgress">قيد العمل</string>
    <string name="itNewJob">عمل جديد</string>
    <string name="sherch">بحث</string>



    <string name="userFullName">الاسم الكامل</string>
    <string name="userNickName">اللقب</string>
    <string name="userBirth">تاريخ الميلاد</string>
    <string name="userGender">الجنس</string>
    <string name="userMale">ذكر</string>
    <string name="userFemale">أنثى</string>
    <string name="userNext">التالي</string>
    <string name="userCity">المدينة</string>
    <string name="userTitle">العنوان</string>
    <string name="userWorkCategory">فئة العمل</string>
    <string name="userCv">تحدث عن نفسك</string>


</resources>