<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/back_activity"
    tools:context=".Activities.PostActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp"
            android:background="@color/back_activity"
            tools:ignore="ScrollViewSize">


    <LinearLayout
        android:id="@+id/projectstateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Project state layout"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/parentCL"
        app:layout_constraintStart_toStartOf="@+id/parentCL"
        app:layout_constraintTop_toTopOf="@+id/parentCL"
        tools:ignore="HardcodedText">
        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/tv_projectstate"
                android:textColor="@color/gray_hint"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/tv_offers"
                android:textColor="@color/gray_hint"
                android:textSize="@dimen/_10ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/PAtv_projectstate"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_19sdp"
                android:background="@drawable/corner"
                android:backgroundTint="@color/green"
                android:contentDescription="Project state: open"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:text="مفتوح"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/PAtv_offers"
                android:layout_width="@dimen/_46sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/cairo_semi_bold"
                android:text="@string/_37i"
                android:textAlignment="center"
                android:textColor="@color/black0"
                android:textSize="@dimen/_11ssp"
                tools:ignore="TextSizeCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/border_et"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/projectstateLayout"
        app:layout_constraintStart_toStartOf="@+id/projectstateLayout"
        app:layout_constraintTop_toBottomOf="@+id/projectstateLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/PAtv_postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/cairo_semi_bold"
            android:text="@string/jobTitle"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/PAtv_postDec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/post_paragraph"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/PAtv_postTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/_2"
            android:textAlignment="textStart"
            android:textColor="@color/black0"
            android:textSize="@dimen/_9ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:fontFamily="@font/cairo_regular"
                    android:gravity="start"
                    android:text="@string/ile"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="TextContrastCheck" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/PAtv_postPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:fontFamily="@font/cairo_regular"
                    android:gravity="start"
                    android:text="@string/_200"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/PAtv_postLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableStart="@drawable/pin"
                android:drawablePadding="@dimen/_4sdp"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/city"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/blue"
                android:textSize="@dimen/_10ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/PAtv_jobTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:drawableStart="@drawable/clender"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/month"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            android:textSize="@dimen/_10ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/PACategoryRecycle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_39sdp"
            android:layout_marginTop="@dimen/_5sdp"
          />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PAImageRecycle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"/>





        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>