<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_activity"
    tools:context=".Activities.PhoneRegistrationActivity">



    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_5"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendVerificationCode"
        app:layout_constraintVertical_bias="0.0" />

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_20sdp"-->
<!--        android:layout_marginTop="@dimen/_31sdp"-->
<!--        android:layout_marginEnd="@dimen/_20sdp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <ImageView-->
<!--            android:id="@+id/imgBack"-->
<!--            android:layout_width="@dimen/_17sdp"-->
<!--            android:layout_height="@dimen/_17sdp"-->
<!--            android:layout_gravity="center"-->
<!--            app:srcCompat="@drawable/back_icon" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvBasicInformation"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:text="البيانات الاساسية"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/_18ssp" />-->
<!--    </LinearLayout>-->

    <include
        android:id="@+id/inculd"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/tvPhoneReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/tvPhone"
        android:textColor="#0E2E3B"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inculd" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneReg"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/et_bg"
        android:hint="@string/etPhoneHint"
        android:inputType="number"
        android:paddingStart="@dimen/_50sdp"
        android:textColor="@color/black"
        android:textColorHint="#CFCFCF"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneReg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/tvPalestinePhone"
        android:textColor="@color/green"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etPhoneReg"
        app:layout_constraintStart_toStartOf="@+id/etPhoneReg"
        app:layout_constraintTop_toTopOf="@+id/etPhoneReg" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="#0E2E3B"
        android:text="@string/btnSendVerificationCode"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneReg" />

</androidx.constraintlayout.widget.ConstraintLayout>